// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Context.Section > Section.convert > should convert Section to object 1`] = `
{
  "class": [
    "main",
  ],
  "content": {
    "children": [
      {
        "text": "Block content",
      },
    ],
  },
  "id": "b1",
  "link": "/b1",
  "menu": true,
  "mode": "full",
  "title": {
    "plain": "[b1]",
  },
}
`;

exports[`binotype.Context.Section > Section.load > should handle blocks as record 1`] = `
[
  {
    "class": [
      "main",
    ],
    "content": {
      "$attrs$": {
        "__self": [Object],
        "__source": {
          "columnNumber": 63,
          "fileName": "/home/smika/versioned/binotype/site/src/Context/Section/index.unit.test.tsx",
          "lineNumber": 21,
        },
      },
      "$children$": [
        {
          "$attrs$": null,
          "$children$": null,
          "$elm$": null,
          "$flags$": 0,
          "$key$": null,
          "$name$": null,
          "$tag$": null,
          "$text$": "Block content 1",
        },
      ],
      "$elm$": null,
      "$flags$": 0,
      "$key$": null,
      "$name$": null,
      "$tag$": undefined,
      "$text$": null,
    },
    "id": "b1",
    "link": "/#b1",
    "menu": true,
    "meta": {},
    "mode": "full",
    "title": {
      "formatted": "[b1]",
      "plain": "[b1]",
    },
  },
  {
    "class": [
      "side",
    ],
    "content": {
      "$attrs$": {
        "__self": [Object],
        "__source": {
          "columnNumber": 63,
          "fileName": "/home/smika/versioned/binotype/site/src/Context/Section/index.unit.test.tsx",
          "lineNumber": 22,
        },
      },
      "$children$": [
        {
          "$attrs$": null,
          "$children$": null,
          "$elm$": null,
          "$flags$": 0,
          "$key$": null,
          "$name$": null,
          "$tag$": null,
          "$text$": "Block content 2",
        },
      ],
      "$elm$": null,
      "$flags$": 0,
      "$key$": null,
      "$name$": null,
      "$tag$": undefined,
      "$text$": null,
    },
    "id": "b2",
    "link": "/#b2",
    "menu": true,
    "meta": {},
    "mode": "full",
    "title": {
      "formatted": "[b2]",
      "plain": "[b2]",
    },
  },
]
`;

exports[`binotype.Context.Section > Section.load > should handle fallback mode 1`] = `
[
  {
    "class": [],
    "id": "class",
    "link": "/b1#class",
    "menu": true,
    "meta": {},
    "mode": "header",
    "title": {
      "formatted": "[class]",
      "plain": "[class]",
    },
  },
  {
    "class": [],
    "id": "meta",
    "link": "/b1#meta",
    "menu": true,
    "meta": {},
    "mode": "header",
    "title": {
      "formatted": "[meta]",
      "plain": "[meta]",
    },
  },
  {
    "class": [],
    "id": "content",
    "link": "/b1#content",
    "menu": true,
    "meta": {},
    "mode": "header",
    "title": {
      "formatted": "[content]",
      "plain": "[content]",
    },
  },
]
`;

exports[`binotype.Context.Section > Section.load > should handle simple block object 1`] = `
{
  "class": [
    "main",
  ],
  "content": {
    "$attrs$": {
      "__self": [Object],
      "__source": {
        "columnNumber": 58,
        "fileName": "/home/smika/versioned/binotype/site/src/Context/Section/index.unit.test.tsx",
        "lineNumber": 12,
      },
    },
    "$children$": [
      {
        "$attrs$": null,
        "$children$": null,
        "$elm$": null,
        "$flags$": 0,
        "$key$": null,
        "$name$": null,
        "$tag$": null,
        "$text$": "Block content",
      },
    ],
    "$elm$": null,
    "$flags$": 0,
    "$key$": null,
    "$name$": null,
    "$tag$": undefined,
    "$text$": null,
  },
  "id": "b1",
  "link": "/b1",
  "menu": true,
  "meta": {},
  "mode": "full",
  "title": {
    "formatted": "[b1]",
    "plain": "[b1]",
  },
}
`;
